# spopdyn

./: .gitignore  MANIFEST.in  README  setup.py
experiments/2014-10-29/: make.py
experiments/2014-10-30/: make.py
experiments/2014-11-17/: make.py
spopdyn/: __init__.py  display.py  dtdcti.py  experiment.py  extract.py  itools.py  landscape.py  libpssa_config.py  provenance.py  sbml_writer.py  sensitivity.py
spopdyn/libpssa/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
spopdyn/libpssa/doc/: pSSAlib.html
spopdyn/libpssa/doc/images/: grayscott_alpha.ogv  grayscott_alpha.webm  grayscott_alpha7.ogv  grayscott_alpha7.webm  grayscott_mv.ogv  grayscott_mv.webm  grayscott_mv7.ogv  grayscott_mv7.webm  grayscott_selfsplit.ogv  grayscott_selfsplit.webm  grayscott_selfsplit7.ogv  grayscott_selfsplit7.webm
spopdyn/libpssa/examples/: Makefile  Makefile.am  Makefile.in
spopdyn/libpssa/examples/Gray_Scott_2D/: Makefile  Makefile.am  Makefile.in  main_alpha.cpp  main_alpha7.cpp  main_ms.cpp  main_mv7.cpp  main_sp.cpp  main_sp7.cpp
spopdyn/libpssa/examples/Gray_Scott_2D/.deps/: grays_alpha-main_alpha.Po  grays_alpha7-main_alpha7.Po  grays_ms-main_ms.Po  grays_mv7-main_mv7.Po  grays_sp-main_sp.Po  grays_sp7-main_sp7.Po
spopdyn/libpssa/examples/Gray_Scott_2D/sbml/: grayscott_alpha.sbml  grayscott_alpha7.sbml  grayscott_mv.sbml  grayscott_mv7.sbml  grayscott_sp.sbml  grayscott_sp7.sbml
spopdyn/libpssa/examples/Hreactions/: config.cfg
spopdyn/libpssa/examples/Hreactions/sbml/: Heteroreaction.sbml  Homoreaction.sbml
spopdyn/libpssa/libpssa/: Makefile  Makefile.am  Makefile.in
spopdyn/libpssa/libpssa/dependencies/dSFMT-src-2.1/: gsl_dSFMT.h
spopdyn/libpssa/libpssa/include/: PSSA.h  optimization.h  oscompat.h  stdheaders.h  typedefs.h
spopdyn/libpssa/libpssa/include/MPI/: mpi_spread.h
spopdyn/libpssa/libpssa/include/datamodel/: CompositionRejectionSamplerData.h  DataModel.h  DataModel_DM.h  DataModel_PDM.h  DataModel_PSSACR.h  DataModel_SPDM.h  PSSACR_Bins.h  SimulationInfo.h
spopdyn/libpssa/libpssa/include/gnuplot/: IBgnuplot.h
spopdyn/libpssa/libpssa/include/grouping/: GroupingModule.h  GroupingModule_DM.h  GroupingModule_PDM.h  GroupingModule_PSSACR.h  GroupingModule_SPDM.h
spopdyn/libpssa/libpssa/include/sampling/: CompositionRejectionSampler.h  SamplingModule.h  SamplingModule_DM.h  SamplingModule_PDM.h  SamplingModule_PSSACR.h  SamplingModule_SPDM.h
spopdyn/libpssa/libpssa/include/update/: UpdateModule.h  UpdateModule_DM.h  UpdateModule_PDM.h  UpdateModule_PSSACR.h  UpdateModule_SPDM.h
spopdyn/libpssa/libpssa/include/vtk/: vtk.h
spopdyn/libpssa/libpssa/src/: Makefile  Makefile.am  Makefile.in  PSSA.cpp  config.h  config.h.in  stamp-h1
spopdyn/libpssa/libpssa/src/.deps/: libpssa_la-CompositionRejectionSampler.Plo  libpssa_la-DataModels.Plo  libpssa_la-GroupingModule.Plo  libpssa_la-GroupingModule_DM.Plo  libpssa_la-GroupingModule_PDM.Plo  libpssa_la-GroupingModule_PSSACR.Plo  libpssa_la-GroupingModule_SPDM.Plo  libpssa_la-IBgnuplot.Plo  libpssa_la-PSSA.Plo  libpssa_la-PSSACR_Bins.Plo  libpssa_la-SamplingModule.Plo  libpssa_la-SamplingModule_DM.Plo  libpssa_la-SamplingModule_PDM.Plo  libpssa_la-SamplingModule_PSSACR.Plo  libpssa_la-SamplingModule_SPDM.Plo  libpssa_la-SimulationInfo.Plo  libpssa_la-UpdateModule.Plo  libpssa_la-UpdateModule_DM.Plo  libpssa_la-UpdateModule_PDM.Plo  libpssa_la-UpdateModule_PSSACR.Plo  libpssa_la-UpdateModule_SPDM.Plo  libpssa_la-dSFMT.Plo  libpssa_la-mpi_spread.Plo  libpssa_la-sha1.Plo  libpssa_la-vtk.Plo
spopdyn/libpssa/libpssa/src/MPI/: mpi_spread.cpp
spopdyn/libpssa/libpssa/src/datamodel/: DataModels.cpp  PSSACR_Bins.cpp  SimulationInfo.cpp
spopdyn/libpssa/libpssa/src/gnuplot/: IBgnuplot.cpp
spopdyn/libpssa/libpssa/src/grouping/: GroupingModule.cpp  GroupingModule_DM.cpp  GroupingModule_PDM.cpp  GroupingModule_PSSACR.cpp  GroupingModule_SPDM.cpp
spopdyn/libpssa/libpssa/src/sampling/: CompositionRejectionSampler.cpp  SamplingModule.cpp  SamplingModule_DM.cpp  SamplingModule_PDM.cpp  SamplingModule_PSSACR.cpp  SamplingModule_SPDM.cpp
spopdyn/libpssa/libpssa/src/update/: UpdateModule.cpp  UpdateModule_DM.cpp  UpdateModule_PDM.cpp  UpdateModule_PSSACR.cpp  UpdateModule_SPDM.cpp
spopdyn/libpssa/libpssa/src/vtk/: vtk.cpp
spopdyn/libpssa/pssa_cli/: Makefile  Makefile.am  Makefile.in  main.cpp
spopdyn/libpssa/pssa_cli/.deps/: pssa-main.Po
spopdyn/libpssa/pssa_test/: Makefile  Makefile.am  Makefile.in  TestBase.cpp  TestBase.h  TestDiffusion.cpp  TestDiffusion.h  TestReaction.cpp  TestReaction.h  TestReactionDiffusion.cpp  TestReactionDiffusion.h  main.cpp
spopdyn/libpssa/pssa_test/.deps/: pssa_test-TestBase.Po  pssa_test-TestDiffusion.Po  pssa_test-TestReaction.Po  pssa_test-TestReactionDiffusion.Po  pssa_test-main.Po
spopdyn/libpssa/pssa_test/sbml/: Diffusion.sbml  Multimerization.sbml
spopdyn/tests/: test_sbml_writer.py
