SUBDIRS = libpssa pssa_cli pssa_test examples


docdir=.
nobase_dist_doc_DATA = doc/compass/_theme_template.scss \
doc/compass/config.rb \
doc/compass/shCore.scss \
doc/compass/shCoreDefault.scss \
doc/compass/shCoreDjango.scss \
doc/compass/shCoreEclipse.scss \
doc/compass/shCoreEmacs.scss \
doc/compass/shCoreFadeToGrey.scss \
doc/compass/shCoreMDUltra.scss \
doc/compass/shCoreMidnight.scss \
doc/compass/shCoreRDark.scss \
doc/compass/shThemeDefault.scss \
doc/compass/shThemeDjango.scss \
doc/compass/shThemeEclipse.scss \
doc/compass/shThemeEmacs.scss \
doc/compass/shThemeFadeToGrey.scss \
doc/compass/shThemeMDUltra.scss \
doc/compass/shThemeMidnight.scss \
doc/compass/shThemeRDark.scss \
doc/images/Hete2.jpg \
doc/images/Hete20.jpg \
doc/images/Hete8.jpg \
doc/images/HeteMPI_1.jpg \
doc/images/HeteMPI_200.jpg \
doc/images/config.jpg \
doc/images/gray_scott_term.jpg \
doc/images/grays.jpg \
doc/images/grayscott_alpha.ogv \
doc/images/grayscott_alpha.webm \
doc/images/grayscott_alpha7.ogv \
doc/images/grayscott_alpha7.webm \
doc/images/grayscott_mv.ogv \
doc/images/grayscott_mv.webm \
doc/images/grayscott_mv7.ogv \
doc/images/grayscott_mv7.webm \
doc/images/grayscott_selfsplit.ogv \
doc/images/grayscott_selfsplit.webm \
doc/images/grayscott_selfsplit7.ogv \
doc/images/grayscott_selfsplit7.webm \
doc/images/paraview1.jpg \
doc/images/paraview2.jpg \
doc/images/paraview3.jpg \
doc/images/reaction.jpg \
doc/images/reaction_s.jpg \
doc/images/xml.jpg \
doc/pSSAlib.html \
doc/scripts/shAutoloader.js \
doc/scripts/shBrushAS3.js \
doc/scripts/shBrushAppleScript.js \
doc/scripts/shBrushBash.js \
doc/scripts/shBrushCSharp.js \
doc/scripts/shBrushColdFusion.js \
doc/scripts/shBrushCpp.js \
doc/scripts/shBrushCss.js \
doc/scripts/shBrushDelphi.js \
doc/scripts/shBrushDiff.js \
doc/scripts/shBrushErlang.js \
doc/scripts/shBrushGroovy.js \
doc/scripts/shBrushJScript.js \
doc/scripts/shBrushJava.js \
doc/scripts/shBrushJavaFX.js \
doc/scripts/shBrushPerl.js \
doc/scripts/shBrushPhp.js \
doc/scripts/shBrushPlain.js \
doc/scripts/shBrushPowerShell.js \
doc/scripts/shBrushPython.js \
doc/scripts/shBrushRuby.js \
doc/scripts/shBrushSass.js \
doc/scripts/shBrushScala.js \
doc/scripts/shBrushSql.js \
doc/scripts/shBrushVb.js \
doc/scripts/shBrushXml.js \
doc/scripts/shCore.js \
doc/scripts/shLegacy.js \
doc/src/shAutoloader.js \
doc/src/shCore.js \
doc/src/shLegacy.js \
doc/styles/shCore.css \
doc/styles/shCoreDefault.css \
doc/styles/shCoreDjango.css \
doc/styles/shCoreEclipse.css \
doc/styles/shCoreEmacs.css \
doc/styles/shCoreFadeToGrey.css \
doc/styles/shCoreMDUltra.css \
doc/styles/shCoreMidnight.css \
doc/styles/shCoreRDark.css \
doc/styles/shThemeDefault.css \
doc/styles/shThemeDjango.css \
doc/styles/shThemeEclipse.css \
doc/styles/shThemeEmacs.css \
doc/styles/shThemeFadeToGrey.css \
doc/styles/shThemeMDUltra.css \
doc/styles/shThemeMidnight.css \
doc/styles/shThemeRDark.css \
doc/Ramaswamy2009.pdf \
doc/Ramaswamy2010.pdf \
doc/Ramaswamy2011.pdf \
doc/Ramaswamy2011c.pdf


bin_PROGRAMS = 